--- a/onlineBookShop/src/main/webapp/index.html
+++ b/onlineBookShop/src/main/webapp/index.html
@@ -5,7 +5,7 @@
 <title>BookShop</title>
 </head>
 <body>
-	<form action="login">
+	<form action="login" method="post">
 		Email: <input type="email" name="email"/> <br/>
 		Password: <input type="password" name="password"/> <br/><br/>
 		<input type="submit" value="Sign In"/>
